--- a/balehu.topmonks.com/src/stylesheets/main.scss
+++ b/balehu.topmonks.com/src/stylesheets/main.scss
@@ -62,6 +62,7 @@ section {
 
   &-slider {
     padding-left: 0;
+    z-index: -1;
   }
 
   &-outer [data-action] {
@@ -222,20 +223,6 @@ a {
 // Section - Create & scale your digital economy //
 
 .digital {
-  position: relative;
-  .bl-continue {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    background: #FAFAFA;
-    box-shadow: 0px 19px 66px rgba(0, 0, 0, 0.16);
-    width: 50px;
-    height: 50px;
-    top: -50px;
-    left: calc(50% - 25px);
-  }
   p {
     color: #B4B4B4;
   }
